# wizengine

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt
core/include/: dbg.hpp  dummy.hpp  includes.hpp
core/src/: dummy.cpp
tests/: CMakeLists.txt
tests/src/: test_ECS.cpp  test_ManagerTests.cpp  test_main.cpp
